Button visibility fix

--- a/css/netpyne.less
+++ b/css/netpyne.less
@@ -222,6 +222,7 @@ body {
   padding: 10;
   height: 500;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .netpyneRightField {
@@ -284,8 +285,8 @@ body {
 .listButtonLarge {
   padding: 0px !important;
   font-size: 10px !important;
-  height: 10px !important;
-  width: 10px !important;
+  height: 25px !important;
+  width: 25px !important;
 }
 
 .listButtonSmall {
